changed the html templates to show the correct formatting and created the shorten endpoint to shorten a url and a util function to do the shortening

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,11 @@
                 hx-target="body"
             >
                 <p>Long URL</p>
-                <input class="long-url" />
+                <input class="long-url" name="long-url" />
                 <button class="shorten-button">Shorten</button>
             </form>
         </div>
+        <p>{{ . }}</p>
         <a href="/view_urls">view all your urls</a>
     </body>
 </html>
