--- a/templates/view_urls.html
+++ b/templates/view_urls.html
@@ -14,8 +14,20 @@
                         <p>
                             http://localhost:8080/{{ .ShortenedUrlKey.String }}
                         </p>
-                        <button class="copy-button">Copy</button>
                         <p>{{ .LongUrl.String }}</p>
+                        <form
+                            class="update"
+                            hx-put="/edit_url/{{ .ID }}"
+                            hx-target="body"
+                            hx-swap="outerHTML"
+                        >
+                            <input
+                                name="updated-long-url"
+                                placeholder="update long URL"
+                            />
+                            <button class="edit-button">edit</button>
+                        </form>
+                        <button class="copy-button">Copy</button>
                         <button
                             class="delete-button"
                             hx-delete="/delete_url/{{ .ID }}"
