changed the index.html template

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,8 @@
                 <button class="shorten-button">Shorten</button>
             </form>
         </div>
-        <p>{{ . }}</p>
+        <p>http://localhost:8080/short/{{ . }}</p>
+        <button class="copy-button">Copy</button>
         <a href="/view_urls">view all your urls</a>
     </body>
 </html>
