--- a/templates/view_urls.html
+++ b/templates/view_urls.html
@@ -12,7 +12,7 @@
                 <li>
                     <div class="url">
                         <p>
-                            http://localhost:8080/{{ .ShortenedUrlKey.String }}
+                            http://localhost:8080/short/{{ .ShortenedUrlKey.String }}
                         </p>
                         <p>{{ .LongUrl.String }}</p>
                         <form
