--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,12 @@
                 <button class="shorten-button">Shorten</button>
             </form>
         </div>
-        <p>http://localhost:8080/short/{{ . }}</p>
-        <button class="copy-button">Copy</button>
+        {{ if . }}
+        <div class="short-url">
+            <p>http://localhost:8080/short/{{ . }}</p>
+            <button class="copy-button">Copy</button>
+        </div>
+        {{ end }}
         <a href="/view_urls">view all your urls</a>
     </body>
 </html>
