added the color palette in style.css and linked the static files into the routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.7/dist/htmx.min.js"></script>
+        <link rel="stylesheet" href="../static/style.css" />
         <title>GoShorten</title>
     </head>
     <body>
+        <h1>GoShorten</h1>
         <div class="shorten-url">
             <form
                 class="shorten-url-form"
