--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,24 @@
     <head>
         <meta charset="UTF-8" />
         <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.7/dist/htmx.min.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Epunda+Sans:ital,wght@0,300..900;1,300..900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Epunda+Sans:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        />
         <link rel="stylesheet" href="../static/style.css" />
+        <script src="../static/index.js"></script>
         <title>GoShorten</title>
     </head>
     <body>
@@ -14,18 +31,27 @@
                 hx-post="/shorten"
                 hx-swap="outerHTML"
                 hx-target="body"
+                autocomplete="off"
             >
-                <p>Long URL</p>
+                <p>long url</p>
                 <input class="long-url" name="long-url" />
-                <button class="shorten-button">Shorten</button>
+                <button class="shorten-button" type="submit">
+                    <i class="fa-solid fa-wand-magic-sparkles"></i>
+                </button>
             </form>
+        </div>
+        <div class="view-urls-link">
+            <a class="view-urls-button" href="/view_urls"
+                >view all your urls <i class="fa-solid fa-arrow-right"></i
+            ></a>
         </div>
         {{ if . }}
         <div class="short-url">
-            <p>http://localhost:8080/short/{{ . }}</p>
-            <button class="copy-button">Copy</button>
+            <p id="shortened-url">http://localhost:8080/short/{{ . }}</p>
+            <button class="copy-button" onclick="copyText()">
+                <i class="fa-solid fa-copy"></i>
+            </button>
         </div>
         {{ end }}
-        <a href="/view_urls">view all your urls</a>
     </body>
 </html>
