--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <title>GoShorten</title>
     </head>
     <body>
-        <h1>GoShorten</h1>
+        <h1 class="main-header">GoShorten</h1>
         <div class="shorten-url">
             <form
                 class="shorten-url-form"
