--- a/static/style.css
+++ b/static/style.css
@@ -30,7 +30,8 @@ body {
     background-color: var(--jet);
 }
 
-h1 {
+.second-header,
+.main-header {
     text-align: center;
     margin-bottom: 15px;
     margin-top: 15px;
