--- a/templates/view_urls.html
+++ b/templates/view_urls.html
@@ -24,7 +24,7 @@
         <title>GoShorten</title>
     </head>
     <body>
-        <h1>Your URLs</h1>
+        <h1 class="second-header">Your URLs</h1>
         <div class="urls-container">
             {{ if . }}
             <ul class="urls">
